--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,8 @@ body {
     bottom: 0;
     width: 100%;
     height: 100vh;
-    background: url('/img/bg.jpg') center center no-repeat;
+    /*background: url('/img/bg.jpg') center center no-repeat;*/
+    background: black;
     background-size: cover;
     z-index: -100;
 }
