--- a/css/style.css
+++ b/css/style.css
@@ -110,10 +110,10 @@ h1 span.auto-typing {
 /*A propos*/
 
 .about {
-    padding: 70px 0;
+    padding: 30px 0;
     color: white;
     width: 100%;
-    height: 85vh;
+    height: auto;
     background: rgb(11, 10, 10);
     text-align: center;                 
 }
@@ -144,7 +144,7 @@ h1 span.auto-typing {
     padding: 30px 0;
     color: white;
     width: 100%;
-    height: 95vh;
+    height: auto;
     background: black;
     text-align: center;
 }
@@ -156,7 +156,7 @@ h1 span.auto-typing {
 }
 
 .flex {
-    gap: 30px; /**/
+    gap: 30px; 
     display: flex;
     align-items: center;
     justify-content: center;
