--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body {
 }
 
 header {
-    max-width: 80%;
+    max-width: 100%;
     margin-right: auto;
     margin-left: auto;
 }
@@ -34,13 +34,11 @@ nav {
     flex-wrap: wrap;
     align-items: center;
     width: 100%;
-    padding: 30px 0 10px;
+    padding: 20px;
+    position: fixed;
+    background: black;
+    z-index: 1000;
 }
-
-/*
-nav .logo {
-    width: 100px;
-}*/
 
 nav ul {
     flex: 1;
@@ -255,7 +253,6 @@ h1 span.auto-typing {
 
 .flex2 {
     display: flex;
-    align-items: center;
     justify-content: center;
     flex-wrap: wrap;
 }
