--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,6 @@ body {
     bottom: 0;
     width: 100%;
     height: 130vh;
-    /*background: url('/img/bg.jpg') center center no-repeat;*/
     background: black;
     background-size: cover;
     z-index: -100;
@@ -32,7 +31,6 @@ header {
 nav {
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
     width: 100%;
     padding: 20px;
     position: fixed;
@@ -75,6 +73,7 @@ nav ul li a:hover {
 .title h1 {
     font-size: 60px;
     line-height: 1.2;
+    margin-top: 30px;
 }
 
 .title p {
@@ -184,7 +183,7 @@ h1 span.auto-typing {
     background: rgb(11, 10, 10);
     color: white;
     width: 100%;
-    height: 95vh;
+    height: auto;
     text-align: center;
 }
 
@@ -243,12 +242,17 @@ h1 span.auto-typing {
 /*contacts*/
 
 .mes-contacts {
-    padding: 50px 0;
+    padding: 15px 0;
     color: white;
     width: 100%;
-    height: 35vh;
+    height: auto;
     background: black;
     text-align: center;                 
+}
+
+.mes-contacts h2 {
+    margin: 25px;
+    font-size: 2rem;
 }
 
 .flex2 {
@@ -258,14 +262,12 @@ h1 span.auto-typing {
 }
 
 .contact {
-    width: 170px;
-    height: auto;
-    margin: 15px;
+    font-size: 18px;
+    margin: 5px;
 }
 
 .contact img {
     width: 15px;
-    height: 100%; 
-    margin-right: 5px;
+    height: auto;
 }
 
