--- a/css/style.css
+++ b/css/style.css
@@ -270,6 +270,7 @@ h1 span.auto-typing {
 .contact img {
     width: 15px;
     height: auto;
+    align-items: center;
 }
 
 .linkedin, .email, .github{
@@ -279,40 +280,37 @@ h1 span.auto-typing {
 
 /*modal*/
 .modal {
-    position: fixed;
     display: none;
     position:fixed;
-    z-index: 9999;
+    z-index: 1000;
     left: 0;
     top: 0;
     width: 100%; 
     height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     background-color: rgba(12, 12, 12, 0.5);
 }
 
 .modal-content {
     background-color: #262626;
-    margin: 7.3% auto;
-    padding: 22px;
+    margin: 8% auto;
+    padding: 20px;
     border: 1px solid #484848;
     max-width: 80%;
     max-height: 80%;
     border-radius: 10px;
     overflow-y: auto;
-    /*position: relative;*/
+    position: relative;
     box-shadow: 0 0 20px #2eb0f0 inset, 0 0 20px #2eb0f0;
+    
 }
 
 .close {
     color: #aaa;
     font-size: 28px;
     font-weight: bold;
-    position: absolute;
+    position: fixed;
     right: 90px;
-    top: 80px;
+    top: 65px;
 }
 
 .close:hover, .close:focus {
@@ -334,48 +332,50 @@ h1 span.auto-typing {
     display: block;
 }
 
-
-
-
-/*
-.modal {
-    position:fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(12, 12, 12, 0.5);
+/*modal's img*/
+.project-modal img {
+    width: 250px;
+    height: auto;
+    margin-left: 15px;
+    margin-right: 15px;
+    flex-wrap: wrap;
 }
 
-.modal-content {
-    background-color: #262626;
-    margin: 10% auto;
-    padding: 20px;
-    border: 1px solid #484848;
-    width: 80%;
-    border-radius: 10px;
+#mazeModal img {
+    width: 27px;
+    margin: 15px;
+    flex-wrap: wrap;
 }
 
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-    
+#mazeModal div {
+    display: flex;
+    align-items: center;
 }
 
-.close:hover,
-.close:focus {
-    cursor: pointer;
+#mazeModal .mazegame img {
+    width: 440px;
 }
 
-.project-modal {
-    display: none;
-    height: 400px;
+#mazeModal .gitcode{
+    display: flex;
+    justify-content: center;
+}
+
+#mazeModal .gitcode a {
+    text-decoration: none;
     color: white;
+    display: flex;
+    align-items: center; 
 }
 
-.project-modal.active {
-    display: block;
+#mazeModal .gitcode img {
+    width: 20px;
+    height: auto;
+    margin: 15px;
 }
-*/
+
+#mazeModal .gitcode .label {
+    margin-top: 10px; 
+}
+
+
