--- a/css/style.css
+++ b/css/style.css
@@ -240,6 +240,16 @@ h1 span.auto-typing {
     width: fit-content;
 }
 
+.projet h5 {
+    position: absolute;
+    top: 75%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 1rem;
+    width: fit-content;
+    font-style: italic;
+}
+
 /*contacts*/
 
 .mes-contacts {
@@ -333,12 +343,10 @@ h1 span.auto-typing {
 }
 
 /*modal's img*/
-.project-modal img {
-    width: 250px;
+.project-modal .tk img{
+    width: 350px;
     height: auto;
-    margin-left: 15px;
-    margin-right: 15px;
-    flex-wrap: wrap;
+    
 }
 
 #mazeModal img {
@@ -356,6 +364,7 @@ h1 span.auto-typing {
     width: 440px;
 }
 
+/*
 #mazeModal .gitcode{
     display: flex;
     justify-content: center;
@@ -376,6 +385,34 @@ h1 span.auto-typing {
 
 #mazeModal .gitcode .label {
     margin-top: 10px; 
+}
+*/
+
+#blogModal .connexion .img1 {
+    width: 300px;
+    height: auto;
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-bottom: 30px;
+    flex-wrap: wrap;
+}
+
+#blogModal .connexion .img2 {
+    width: auto;
+    height: 436px;
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-bottom: 30px;
+    flex-wrap: wrap;
+}
+
+#blogModal .frame img{
+    margin-bottom: 30px;
+    width:  950px;
+    height: auto;
+    margin-left: 15px;
+    margin-right: 15px;
+    flex-wrap: wrap;
 }
 
 
